--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alloy",
+  "name": "sns-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,10 +7,20 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.21.0",
+    "bootstrap": "^5.2.2",
+    "ethers": "^5.6.6",
+    "os-browserify": "^0.3.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
+    "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scroll": "^1.8.8",
+    "sinon": "^14.0.2",
+    "web-vitals": "^2.1.4",
+    "web3": "^1.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
