--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.11",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
     "ethers": "^5.6.6",
     "firebase": "^9.21.0",
+    "lodash": "^4.17.21",
     "os-browserify": "^0.3.0",
     "patch-package": "^7.0.0",
     "postinstall-postinstall": "^2.1.0",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
@@ -20,6 +23,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.8",
+    "react-table": "^7.8.0",
     "sass": "^1.62.1",
     "sinon": "^14.0.2",
     "web-vitals": "^2.1.4",
