--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.6.0",
